package main;

public class PrintPointCloud implements IPrintStrategy {
    @Override
    public void printDiagram(DataSet dataset){
        System.out.println("LLego aquí");
    }
}
