@startuml

title __MAIN's Class Diagram__\n

  namespace main {
    class main.App {
        - authorLabel : JLabel
        - barsRadioButton : JRadioButton
        - buttonCancel : JButton
        - buttonOK : JButton
        - buttonsPanel : JPanel
        - cloudRadioButton : JRadioButton
        - contentPane : JPanel
        - contentPanel : JPanel
        - diagramLabel : JLabel
        - fileLabel : JLabel
        - fileOneRadioButton : JRadioButton
        - fileThreeRadioButton : JRadioButton
        - fileTwoRadioButton : JRadioButton
        + App()
        - onCancel()
        - onOK()
    }
  }
  

  namespace main {
    class main.ContextLoadData {
        + ContextLoadData()
        + executeStrategy()
    }
  }
  

  namespace main {
    class main.ContextPrintData {
        + ContextPrintData()
        + executeStrategy()
    }
  }
  

  namespace main {
    class main.DataSet {
        # data : List<String[]>
        + getData()
        ~ DataSet()
        ~ printData()
    }
  }
  

  namespace main {
    interface main.ILoadDataStrategy {
        {abstract} + loadStrategy()
    }
  }
  

  namespace main {
    interface main.IPrintStrategy {
        {abstract} + printDiagram()
    }
  }
  

  namespace main {
    class main.Lienzo {
        - contentPane : JPanel
        + Lienzo()
        - onCancel()
    }
  }
  

  namespace main {
    class main.LoadDataFactory {
        {static} + createLoadDataStrategy()
    }
  }
  

  namespace main {
    enum LoadDataStrategyType {
      LOCAL
      REMOTE
    }
  }
  

  namespace main {
    class main.LoadLocalData {
        + loadStrategy()
    }
  }
  

  namespace main {
    class main.LoadRemoteData {
        + loadStrategy()
    }
  }
  

  namespace main {
    class main.Main {
        {static} + main()
    }
  }
  

  namespace main {
    class main.PrintBarChart {
        + printDiagram()
    }
  }
  

  namespace main {
    class main.PrintFactory {
        {static} + createPrintStrategy()
    }
  }
  

  namespace main {
    class main.PrintPointCloud {
        + printDiagram()
    }
  }
  

  namespace main {
    enum PrintStrategyType {
      BAR
      POINT_CLOUD
    }
  }
  

  main.App -up-|> javax.swing.JDialog
  main.ContextLoadData o-- main.ILoadDataStrategy : loadDataStrategy
  main.ContextPrintData o-- main.IPrintStrategy : printDataStrategy
  main.Lienzo -up-|> javax.swing.JDialog
  main.LoadLocalData .up.|> main.ILoadDataStrategy
  main.LoadRemoteData .up.|> main.ILoadDataStrategy
  main.PrintBarChart .up.|> main.IPrintStrategy
  main.PrintPointCloud .up.|> main.IPrintStrategy


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
